# crewai_step_11

./: readme.md
00_simpleflow/: README.md  poem.txt  pyproject.toml
00_simpleflow/src/simpleflow/: main.py
01_routes/: crewai_flow.html
02_parallelization/: README.md  crewai_flow.html  pyproject.toml
02_parallelization/src/routes/: main.py
03_orchestrator_workers/src/routes/: main.py
04_evaluator_optimizer_flow/src/routes/: main.py
05_autonomous_agent_workflow/: crewai_flow.html  poem.txt
